Pentium core and instructions

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,7 +57,11 @@ OPCC_H = \
 	\
 	dosboxxr/lib/cpu/core/intel80486.c16.a16.decom.h \
 	dosboxxr/lib/cpu/core/intel80486.cxx.axx.decom.h \
-	dosboxxr/lib/cpu/core/intel80486.c32.a32.decom.h
+	dosboxxr/lib/cpu/core/intel80486.c32.a32.decom.h \
+	\
+	dosboxxr/lib/cpu/core/intelPentium.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium.cxx.axx.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium.c32.a32.decom.h
 
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
@@ -70,7 +74,11 @@ test3.bin: test3.asm
 
 test4.bin: test4.asm
 	yasm -o $@ -f bin $<
-test-bins: test1.bin test2.bin test3.bin test4.bin
+
+test5.bin: test5.asm
+	yasm -o $@ -f bin $<
+
+test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin
 
 opcc$(EXEEXT): opcc.cpp
 	$(BUILD_CXX) -o $@ $<
@@ -102,6 +110,15 @@ dosboxxr/lib/cpu/core/intel80486.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel804
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
 dosboxxr/lib/cpu/core/intel80486.c32.a32.decom.h: dosboxxr/lib/cpu/core/intel80486.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
+
+dosboxxr/lib/cpu/core/intelPentium.opcodes.p: opcodes/intelPentium.opcodes
+	$(BUILD_CPP) -I. opcodes/intelPentium.opcodes -o $@
+dosboxxr/lib/cpu/core/intelPentium.c16.a16.decom.h: dosboxxr/lib/cpu/core/intelPentium.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium.opcodes.p -o $@ -m decompile -c 16 -a 16 -c32vars
+dosboxxr/lib/cpu/core/intelPentium.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+dosboxxr/lib/cpu/core/intelPentium.c32.a32.decom.h: dosboxxr/lib/cpu/core/intelPentium.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
 
 # grrr how do I get automake to run opcc first before compiling other parts?
 opcodes: $(OPCC_H)
