Begin Pentium III core. Note the weird encoding Intel uses to allow re-using MMX opcodes as SSE instructions. That will complicate our opcode compiler a bit, but I have an idea to handle it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,7 +36,10 @@ cpudec86_SOURCES = cpudec86.cpp \
 	cpudec86_pentiumprommx.cpp \
 	cpudec86_pentiumprommx_generic.cpp \
 	cpudec86_pentium2.cpp \
-	cpudec86_pentium2_generic.cpp
+	cpudec86_pentium2_generic.cpp \
+	cpudec86_pentium3.cpp \
+	cpudec86_pentium3_generic.cpp
+
 cpudec86_CXXFLAGS = $(AM_CXXFLAGS)
 cpudec86_DEPENDENCIES = \
 	dosboxxr/lib/cpu/libcpu.a $(OPCC_H)
@@ -93,7 +96,11 @@ OPCC_H = \
 	\
 	dosboxxr/lib/cpu/core/intelPentium2.c16.a16.decom.h \
 	dosboxxr/lib/cpu/core/intelPentium2.cxx.axx.decom.h \
-	dosboxxr/lib/cpu/core/intelPentium2.c32.a32.decom.h
+	dosboxxr/lib/cpu/core/intelPentium2.c32.a32.decom.h \
+	\
+	dosboxxr/lib/cpu/core/intelPentium3.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium3.cxx.axx.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium3.c32.a32.decom.h
 
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
@@ -119,7 +126,10 @@ test5mmx.bin: test5mmx.asm
 testp2.bin: testp2.asm
 	yasm -o $@ -f bin $<
 
-test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin test5pro.bin test5mmx.bin testp2.bin
+testp3.bin: testp3.asm
+	yasm -o $@ -f bin $<
+
+test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin test5pro.bin test5mmx.bin testp2.bin testp3.bin
 
 opcc$(EXEEXT): opcc.cpp
 	$(BUILD_CXX) -o $@ $<
@@ -196,6 +206,15 @@ dosboxxr/lib/cpu/core/intelPentium2.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium2.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
 dosboxxr/lib/cpu/core/intelPentium2.c32.a32.decom.h: dosboxxr/lib/cpu/core/intelPentium2.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium2.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
+
+dosboxxr/lib/cpu/core/intelPentium3.opcodes.p: opcodes/intelPentium3.opcodes
+	$(BUILD_CPP) -I. opcodes/intelPentium3.opcodes -o $@
+dosboxxr/lib/cpu/core/intelPentium3.c16.a16.decom.h: dosboxxr/lib/cpu/core/intelPentium3.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium3.opcodes.p -o $@ -m decompile -c 16 -a 16 -c32vars
+dosboxxr/lib/cpu/core/intelPentium3.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium3.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium3.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+dosboxxr/lib/cpu/core/intelPentium3.c32.a32.decom.h: dosboxxr/lib/cpu/core/intelPentium3.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium3.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
 
 # grrr how do I get automake to run opcc first before compiling other parts?
 opcodes: $(OPCC_H)
