Pentium 4 Prescott instructions

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,9 @@ cpudec86_SOURCES = cpudec86.cpp \
 	cpudec86_pentium3.cpp \
 	cpudec86_pentium3_generic.cpp \
 	cpudec86_pentium4.cpp \
-	cpudec86_pentium4_generic.cpp
+	cpudec86_pentium4_generic.cpp \
+	cpudec86_pentium4prescott.cpp \
+	cpudec86_pentium4prescott_generic.cpp
 
 cpudec86_CXXFLAGS = $(AM_CXXFLAGS)
 cpudec86_DEPENDENCIES = \
@@ -109,7 +111,11 @@ OPCC_H = \
 	\
 	dosboxxr/lib/cpu/core/intelPentium4.c16.a16.decom.h \
 	dosboxxr/lib/cpu/core/intelPentium4.cxx.axx.decom.h \
-	dosboxxr/lib/cpu/core/intelPentium4.c32.a32.decom.h
+	dosboxxr/lib/cpu/core/intelPentium4.c32.a32.decom.h \
+	\
+	dosboxxr/lib/cpu/core/intelPentium4Prescott.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium4Prescott.cxx.axx.decom.h \
+	dosboxxr/lib/cpu/core/intelPentium4Prescott.c32.a32.decom.h
 
 test1.bin: test1.asm
 	yasm -o $@ -f bin $<
@@ -141,7 +147,10 @@ testp3.bin: testp3.asm
 testp4.bin: testp4.asm
 	yasm -o $@ -f bin $<
 
-test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin test5pro.bin test5mmx.bin testp2.bin testp3.bin testp4.bin
+testp4p.bin: testp4p.asm
+	yasm -o $@ -f bin $<
+
+test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin test5pro.bin test5mmx.bin testp2.bin testp3.bin testp4.bin testp4p.bin
 
 opcc$(EXEEXT): opcc.cpp
 	$(BUILD_CXX) -o $@ $<
@@ -241,6 +250,15 @@ dosboxxr/lib/cpu/core/intelPentium4.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
 dosboxxr/lib/cpu/core/intelPentium4.c32.a32.decom.h: dosboxxr/lib/cpu/core/intelPentium4.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
+
+dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p: opcodes/intelPentium4Prescott.opcodes
+	$(BUILD_CPP) -I. opcodes/intelPentium4Prescott.opcodes -o $@
+dosboxxr/lib/cpu/core/intelPentium4Prescott.c16.a16.decom.h: dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p -o $@ -m decompile -c 16 -a 16 -c32vars
+dosboxxr/lib/cpu/core/intelPentium4Prescott.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+dosboxxr/lib/cpu/core/intelPentium4Prescott.c32.a32.decom.h: dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intelPentium4Prescott.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
 
 # grrr how do I get automake to run opcc first before compiling other parts?
 opcodes: $(OPCC_H)
