early 486 core (with old CMPXCHG opcode and no CPUID)

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,8 @@ cpudec86_SOURCES = cpudec86.cpp \
 	cpudec86_80286.cpp \
 	cpudec86_80386.cpp \
 	cpudec86_80386_generic.cpp \
+	cpudec86_80486early.cpp \
+	cpudec86_80486early_generic.cpp \
 	cpudec86_80486.cpp \
 	cpudec86_80486_generic.cpp \
 	cpudec86_pentium.cpp \
@@ -88,6 +90,10 @@ OPCC_H = \
 	dosboxxr/lib/cpu/core/intel80486.cxx.axx.decom.h \
 	dosboxxr/lib/cpu/core/intel80486.c32.a32.decom.h \
 	\
+	dosboxxr/lib/cpu/core/intel80486early.c16.a16.decom.h \
+	dosboxxr/lib/cpu/core/intel80486early.cxx.axx.decom.h \
+	dosboxxr/lib/cpu/core/intel80486early.c32.a32.decom.h \
+	\
 	dosboxxr/lib/cpu/core/intelPentium.c16.a16.decom.h \
 	dosboxxr/lib/cpu/core/intelPentium.cxx.axx.decom.h \
 	dosboxxr/lib/cpu/core/intelPentium.c32.a32.decom.h \
@@ -132,6 +138,9 @@ test3.bin: test3.asm
 test4.bin: test4.asm
 	yasm -o $@ -f bin $<
 
+test4e.bin: test4e.asm
+	yasm -o $@ -f bin $<
+
 test5.bin: test5.asm
 	yasm -o $@ -f bin $<
 
@@ -156,7 +165,7 @@ testp4p.bin: testp4p.asm
 testv20.bin: testv20.asm
 	yasm -o $@ -f bin $<
 
-test-bins: test1.bin test2.bin test3.bin test4.bin test5.bin test5pro.bin test5mmx.bin testp2.bin testp3.bin testp4.bin testp4p.bin testv20.bin
+test-bins: test1.bin test2.bin test3.bin test4.bin test4e.bin test5.bin test5pro.bin test5mmx.bin testp2.bin testp3.bin testp4.bin testp4p.bin testv20.bin
 
 opcc$(EXEEXT): opcc.cpp
 	$(BUILD_CXX) -o $@ $<
@@ -198,6 +207,15 @@ dosboxxr/lib/cpu/core/intel80486.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel804
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
 dosboxxr/lib/cpu/core/intel80486.c32.a32.decom.h: dosboxxr/lib/cpu/core/intel80486.opcodes.p opcc$(EXEEXT)
 	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
+
+dosboxxr/lib/cpu/core/intel80486early.opcodes.p: opcodes/intel80486early.opcodes
+	$(BUILD_CPP) -I. opcodes/intel80486early.opcodes -o $@
+dosboxxr/lib/cpu/core/intel80486early.c16.a16.decom.h: dosboxxr/lib/cpu/core/intel80486early.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486early.opcodes.p -o $@ -m decompile -c 16 -a 16 -c32vars
+dosboxxr/lib/cpu/core/intel80486early.cxx.axx.decom.h: dosboxxr/lib/cpu/core/intel80486early.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486early.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars -g
+dosboxxr/lib/cpu/core/intel80486early.c32.a32.decom.h: dosboxxr/lib/cpu/core/intel80486early.opcodes.p opcc$(EXEEXT)
+	./opcc$(EXEEXT) -i dosboxxr/lib/cpu/core/intel80486early.opcodes.p -o $@ -m decompile -c 32 -a 32 -c32vars
 
 dosboxxr/lib/cpu/core/intelPentium.opcodes.p: opcodes/intelPentium.opcodes
 	$(BUILD_CPP) -I. opcodes/intelPentium.opcodes -o $@
